--- a/cygnus/src/main/resources/generator/sculptor-generator.properties
+++ b/cygnus/src/main/resources/generator/sculptor-generator.properties
@@ -17,11 +17,15 @@
 project.nature=business-tier
 
 #App Server Configuration
-#deployment.applicationServer=JBoss
+deployment.applicationServer=JBoss
 
 #Database Vendor
 db.product=mysql
 db.mysql.onDeleteCascade=false
+
+
+#db.useTablePrefixedIdColumn=true
+#db.useUnderscoreNaming=false
 
 #Package Names
 package.serviceInterface=service
