--- a/cygnus-web/.classpath
+++ b/cygnus-web/.classpath
@@ -1,136 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
-  <classpathentry kind="src" path="src/test/generated/java" output="target/test-classes"/>
-  <classpathentry kind="src" path="src/test/resources" output="target/test-classes" excluding="**/*.java"/>
-  <classpathentry kind="src" path="src/test/generated/resources" output="target/test-classes" excluding="**/*.java"/>
-  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="src" path="src/generated/java" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
-  <classpathentry kind="src" path="src/generated/resources" excluding="**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="var" path="M2_REPO/javax/el/com.springsource.javax.el/1.0.0/com.springsource.javax.el-1.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/faces/com.springsource.javax.faces/1.2.0.09/com.springsource.javax.faces-1.2.0.09.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/servlet/jstl/1.1.2/jstl-1.1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.0.1B/jta-1.0.1B.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/persistence/persistence-api/1.0/persistence-api-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.6/antlr-2.7.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/antlr/antlr/3.0.1/antlr-3.0.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/aspectj/aspectjrt/1.5.3/aspectjrt-1.5.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/aspectj/aspectjweaver/1.5.3/aspectjweaver-1.5.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/batik/batik-awt-util/1.6-1/batik-awt-util-1.6-1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/batik/batik-ext/1.6-1/batik-ext-1.6-1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/batik/batik-gui-util/1.6-1/batik-gui-util-1.6-1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/batik/batik-util/1.6-1/batik-util-1.6-1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.2/cglib-nodep-2.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/com.google.collect/0.8.0.v201008251220/com.google.collect-0.8.0.v201008251220.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/com.google.inject/2.0.0.v201003051000/com.google.inject-2.0.0.v201003051000.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/com.ibm.icu/4.2.1.v20100412/com.ibm.icu-4.2.1.v20100412.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/sun/faces/com.springsource.com.sun.faces/1.2.0.09/com.springsource.com.sun.faces-1.2.0.09.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/aopalliance/com.springsource.org.aopalliance/1.0.0/com.springsource.org.aopalliance-1.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/el/com.springsource.org.jboss.el/2.0.0.GA/com.springsource.org.jboss.el-2.0.0.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.2/commons-collections-3.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-dbcp/commons-dbcp/1.2.1/commons-dbcp-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-digester/commons-digester/1.6/commons-digester-1.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.2.1/commons-fileupload-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/1.3.2/commons-io-1.3.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.1/commons-lang-2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-pool/commons-pool/1.3/commons-pool-1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-validator/commons-validator/1.3.1/commons-validator-1.3.1.jar"/>
-  <classpathentry kind="src" path="/cygnus"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/de.itemis.xtext.antlr/1.0.1.v201008241111/de.itemis.xtext.antlr-1.0.1.v201008241111.jar"/>
-  <classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/sf/ehcache/ehcache-core/1.7.2/ehcache-core-1.7.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/ejb3-persistence/1.0.2.GA/ejb3-persistence-1.0.2.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/cartridges/fornax-cartridges-sculptor-framework/2.0.0/fornax-cartridges-sculptor-framework-2.0.0-without-ejb.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/cartridges/fornax-cartridges-sculptor-framework/2.0.0/fornax-cartridges-sculptor-framework-2.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/cartridges/fornax-cartridges-sculptor-framework-test/2.0.0/fornax-cartridges-sculptor-framework-test-2.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/cartridges/fornax-cartridges-sculptor-framework-web/2.0.0/fornax-cartridges-sculptor-framework-web-2.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/cartridges/fornax-cartridges-sculptor-generator/2.0.0/fornax-cartridges-sculptor-generator-2.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/cartridges/fornax-cartridges-sculptor-metamodel/2.0.0/fornax-cartridges-sculptor-metamodel-2.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/utilities/fornax-utilities-formatter-xml/2.0.0/fornax-utilities-formatter-xml-2.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.1/hamcrest-core-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-library/1.1/hamcrest-library-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-annotations/3.4.0.GA/hibernate-annotations-3.4.0.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-commons-annotations/3.1.0.GA/hibernate-commons-annotations-3.1.0.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-core/3.3.1.GA/hibernate-core-3.3.1.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-entitymanager/3.4.0.GA/hibernate-entitymanager-3.4.0.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-validator/3.1.0.GA/hibernate-validator-3.1.0.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/hsqldb/hsqldb/1.8.0.1/hsqldb-1.8.0.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hybridlabs/hybridlabs-beautifier-core/2.1.1/hybridlabs-beautifier-core-2.1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hybridlabs/hybridlabs-beautifier-m2t-xpand/2.1.1/hybridlabs-beautifier-m2t-xpand-2.1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/lowagie/itext/1.4.8/itext-1.4.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/de/hunsicker/jalopy/jalopy-core/1.6-beta2/jalopy-core-1.6-beta2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javassist/javassist/3.4.GA/javassist-3.4.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/jcl-over-slf4j/1.6.1/jcl-over-slf4j-1.6.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jmock/jmock/2.2.0/jmock-2.2.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/joda-time/joda-time/1.6/joda-time-1.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/joda-time/joda-time-hibernate/1.2/joda-time-hibernate-1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/sun/facelets/jsf-facelets/1.1.15/jsf-facelets-1.1.15.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.6/junit-4.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/log4j-over-slf4j/1.6.1/log4j-over-slf4j-1.6.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-classic/0.9.28/logback-classic-0.9.28.jar"/>
-  <classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-core/0.9.28/logback-core-0.9.28.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.antlr.runtime/3.0.0.v200803061811/org.antlr.runtime-3.0.0.v200803061811.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.apache.commons.cli/1.0.0.v20080604-1500/org.apache.commons.cli-1.0.0.v20080604-1500.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.codegen/2.6.0.v20100614-1136/org.eclipse.emf.codegen-2.6.0.v20100614-1136.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.codegen.ecore/2.6.0.v20100614-1136/org.eclipse.emf.codegen.ecore-2.6.0.v20100614-1136.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.common/2.6.0.v20100614-1136/org.eclipse.emf.common-2.6.0.v20100614-1136.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.ecore/2.6.0.v20100614-1136/org.eclipse.emf.ecore-2.6.0.v20100614-1136.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.ecore.xmi/2.5.0.v20100521-1846/org.eclipse.emf.ecore.xmi-2.5.0.v20100521-1846.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.mwe.core/1.0.0.v201006150535/org.eclipse.emf.mwe.core-1.0.0.v201006150535.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.mwe.utils/1.0.0.v201006150535/org.eclipse.emf.mwe.utils-1.0.0.v201006150535.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.mwe2.language/1.0.0.v201006150907/org.eclipse.emf.mwe2.language-1.0.0.v201006150907.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.mwe2.launch/1.0.0.v201006150907/org.eclipse.emf.mwe2.launch-1.0.0.v201006150907.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.emf.mwe2.runtime/1.0.0.v201006150446/org.eclipse.emf.mwe2.runtime-1.0.0.v201006150446.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.equinox.app/1.3.0.v20100512/org.eclipse.equinox.app-1.3.0.v20100512.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.xpand/1.0.1.v201008251147/org.eclipse.xpand-1.0.1.v201008251147.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.xtend/1.0.1.v201008251147/org.eclipse.xtend-1.0.1.v201008251147.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.xtend.typesystem.emf/1.0.1.v201008251147/org.eclipse.xtend.typesystem.emf-1.0.1.v201008251147.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.xtext/1.0.1.v201008251220/org.eclipse.xtext-1.0.1.v201008251220.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.xtext.common.types/1.0.1.v201008251220/org.eclipse.xtext.common.types-1.0.1.v201008251220.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.xtext.generator/1.0.1.v201008251220/org.eclipse.xtext.generator-1.0.1.v201008251220.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.xtext.util/1.0.1.v201008251220/org.eclipse.xtext.util-1.0.1.v201008251220.jar"/>
-  <classpathentry kind="var" path="M2_REPO/p2/osgi/bundle/org.eclipse.xtext.xtend/1.0.1.v201008251220/org.eclipse.xtext.xtend-1.0.1.v201008251220.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/cartridges/org.fornax.cartridges.sculptor.dsl/2.0.0/org.fornax.cartridges.sculptor.dsl-2.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fornax/cartridges/org.fornax.cartridges.sculptor.gui.dsl/2.0.0/org.fornax.cartridges.sculptor.gui.dsl-2.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.aop/3.0.4.RELEASE/org.springframework.aop-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.asm/3.0.4.RELEASE/org.springframework.asm-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.beans/3.0.4.RELEASE/org.springframework.beans-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/org.springframework.binding/2.2.1.RELEASE/org.springframework.binding-2.2.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.context/3.0.4.RELEASE/org.springframework.context-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.context.support/3.0.4.RELEASE/org.springframework.context.support-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.core/3.0.4.RELEASE/org.springframework.core-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.expression/3.0.4.RELEASE/org.springframework.expression-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/org.springframework.faces/2.2.1.RELEASE/org.springframework.faces-2.2.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/org.springframework.js/2.2.1.RELEASE/org.springframework.js-2.2.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/org.springframework.js.resources/2.2.1.RELEASE/org.springframework.js.resources-2.2.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.web/3.0.4.RELEASE/org.springframework.web-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.web.servlet/3.0.4.RELEASE/org.springframework.web.servlet-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/org.springframework.webflow/2.2.1.RELEASE/org.springframework.webflow-2.2.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/oro/oro/2.0.8/oro-2.0.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-aop/3.0.4.RELEASE/spring-aop-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-asm/3.0.4.RELEASE/spring-asm-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-beans/3.0.4.RELEASE/spring-beans-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-context/3.0.4.RELEASE/spring-context-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-context-support/3.0.4.RELEASE/spring-context-support-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-core/3.0.4.RELEASE/spring-core-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-expression/3.0.4.RELEASE/spring-expression-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-jdbc/3.0.4.RELEASE/spring-jdbc-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-jms/3.0.4.RELEASE/spring-jms-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-orm/3.0.4.RELEASE/spring-orm-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-tx/3.0.4.RELEASE/spring-tx-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-web/3.0.4.RELEASE/spring-web-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-webmvc/3.0.4.RELEASE/spring-webmvc-3.0.4.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/taglibs/standard/1.1.2/standard-1.1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/antlr/stringtemplate/3.1-b1/stringtemplate-3.1-b1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/myfaces/tomahawk/tomahawk12/1.1.8/tomahawk12-1.1.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.6.2/xercesImpl-2.6.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/xerces/xmlParserAPIs/2.6.2/xmlParserAPIs-2.6.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/xml-apis/xmlParserAPIs/2.0.2/xmlParserAPIs-2.0.2.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" output="src/main/webapp/WEB-INF/classes" path="src/main/java"/>
+	<classpathentry kind="src" path="target/generated-sources/gwt"/>
+	<classpathentry kind="src" output="src/main/webapp/WEB-INF/classes" path="src/main/resources"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
+	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
