--- a/cygnus-web/src/main/webapp/WEB-INF/web.xml
+++ b/cygnus-web/src/main/webapp/WEB-INF/web.xml
@@ -1,167 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE web-app
+    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+    "http://java.sun.com/dtd/web-app_2_3.dtd">
 
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee                        http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">  
-  <display-name>boolian-web</display-name>  
-  <!-- Serves static resource content from .jar files such as spring-faces.jar -->  
-  <servlet> 
-    <servlet-name>Resources Servlet</servlet-name>  
-    <servlet-class>org.springframework.js.resource.ResourceServlet</servlet-class>  
-    <load-on-startup>0</load-on-startup> 
-  </servlet>  
-  <!-- Map all /resources requests to the Resource Servlet for handling -->  
-  <servlet-mapping> 
-    <servlet-name>Resources Servlet</servlet-name>  
-    <url-pattern>/resources/*</url-pattern> 
-  </servlet-mapping>  
-  <!-- The front controller of this Spring Web application, responsible for handling all application requests -->  
-  <servlet> 
-    <servlet-name>Spring MVC Dispatcher Servlet</servlet-name>  
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
-    <init-param> 
-      <param-name>contextConfigLocation</param-name>  
-      <param-value/> 
-    </init-param>  
-    <load-on-startup>2</load-on-startup> 
-  </servlet>  
-  <!-- Map all /spring requests to the Dispatcher Servlet for handling -->  
-  <servlet-mapping> 
-    <servlet-name>Spring MVC Dispatcher Servlet</servlet-name>  
-    <url-pattern>/spring/*</url-pattern> 
-  </servlet-mapping>  
-  <!-- Just here so the JSF implementation can initialize, *not* used at runtime -->  
-  <servlet> 
-    <servlet-name>Standard Faces Servlet</servlet-name>  
-    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>  
-    <load-on-startup>1</load-on-startup> 
-  </servlet>  
-  <!-- Just here so the JSF implementation can initialize -->  
-  <servlet-mapping> 
-    <servlet-name>Standard Faces Servlet</servlet-name>  
-    <url-pattern>*.xhtml</url-pattern> 
-  </servlet-mapping>  
-  <context-param> 
-    <param-name>facelets.LIBRARIES</param-name>  
-    <param-value>/WEB-INF/generated/config/application.taglib.xml</param-value> 
-  </context-param>  
-  <context-param> 
-    <param-name>javax.faces.CONFIG_FILES</param-name>  
-    <param-value>/WEB-INF/generated/config/faces-config.xml</param-value> 
-  </context-param>  
-  <context-param> 
-    <param-name>javax.faces.DEFAULT_SUFFIX</param-name>  
-    <param-value>.xhtml</param-value> 
-  </context-param>  
-  <context-param> 
-    <param-name>javax.faces.STATE_SAVING_METHOD</param-name>  
-    <param-value>server</param-value> 
-  </context-param>  
-  <!--<context-param>
-		<param-name>org.apache.myfaces.ALLOW_JAVASCRIPT</param-name>
-		<param-value>true</param-value>
-		</context-param>
-		<context-param>
-		<param-name>org.apache.myfaces.DETECT_JAVASCRIPT</param-name>
-		<param-value>false</param-value>
-		</context-param>
-		<context-param>
-		<param-name>org.apache.myfaces.PRETTY_HTML</param-name>
-		<param-value>true</param-value>
-		</context-param>
-		<context-param>
-		<param-name>org.apache.myfaces.AUTO_SCROLL</param-name>
-		<param-value>true</param-value>
-		</context-param>-->  
-  <context-param> 
-    <param-name>facelets.DEVELOPMENT</param-name>  
-    <param-value>true</param-value> 
-  </context-param>  
-  <!-- Causes Facelets to refresh templates during development -->  
-  <context-param> 
-    <param-name>facelets.REFRESH_PERIOD</param-name>  
-    <param-value>1</param-value> 
-  </context-param>  
-  <!-- Neede to prevent JBoss from using its own bundled JSF impl -->  
-  <context-param> 
-    <param-name>org.jboss.jbossfaces.WAR_BUNDLES_JSF_IMPL</param-name>  
-    <param-value>true</param-value> 
-  </context-param>  
-  <!--context-param>
-        <param-name>org.apache.myfaces.ERROR_HANDLER</param-name>
-        <param-value>my.project.ErrorHandler</param-value>
-    </context-param>
-    <context-param>
-        <param-name>org.apache.myfaces.DISABLE_TOMAHAWK_FACES_CONTEXT_WRAPPER</param-name>
-        <param-value>true</param-value>
-    </context-param-->  
-  <!--  spring config params and listeners -->  
-  <context-param> 
-    <param-name>contextConfigLocation</param-name>  
-    <param-value>/WEB-INF/generated/config/applicationContext.xml</param-value> 
-  </context-param>  
-  <!--listener>
-        <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
-    </listener-->  
-  <listener> 
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
-  </listener>  
-  <listener> 
-    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class> 
-  </listener>  
-  <listener> 
-    <listener-class>com.sun.faces.config.ConfigureListener</listener-class> 
-  </listener>  
-  <!--  load a shared business tier parent application context -->  
-  <context-param> 
-    <param-name>locatorFactorySelector</param-name>  
-    <param-value>beanRefContext.xml</param-value> 
-  </context-param>  
-  <context-param> 
-    <param-name>parentContextKey</param-name>  
-    <param-value>com.boolian</param-value> 
-  </context-param>  
-  <filter> 
-    <filter-name>serviceContextFilter</filter-name>  
-    <filter-class>org.fornax.cartridges.sculptor.framework.errorhandling.ServiceContextServletFilter</filter-class>  
-    <init-param> 
-      <param-name>ServiceContextFactoryImplementationClassName</param-name>  
-      <param-value>org.fornax.cartridges.sculptor.framework.errorhandling.ServletContainerServiceContextFactory</param-value> 
-    </init-param> 
-  </filter>  
-  <filter-mapping> 
-    <filter-name>serviceContextFilter</filter-name>  
-    <url-pattern>/*</url-pattern> 
-  </filter-mapping>  
-  <filter> 
-    <filter-name>MyFacesExtensionsFilter</filter-name>  
-    <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>  
-    <init-param> 
-      <param-name>maxFileSize</param-name>  
-      <param-value>20m</param-value> 
-    </init-param> 
-  </filter>  
-  <filter-mapping> 
-    <filter-name>MyFacesExtensionsFilter</filter-name>  
-    <servlet-name>Spring MVC Dispatcher Servlet</servlet-name> 
-  </filter-mapping>  
-  <filter-mapping> 
-    <filter-name>MyFacesExtensionsFilter</filter-name>  
-    <servlet-name>Standard Faces Servlet</servlet-name> 
-  </filter-mapping>  
-  <filter-mapping> 
-    <filter-name>MyFacesExtensionsFilter</filter-name>  
-    <url-pattern>/faces/myFacesExtensionResource/*</url-pattern> 
-  </filter-mapping>  
-  <filter-mapping> 
-    <filter-name>MyFacesExtensionsFilter</filter-name>  
-    <url-pattern>*.xhtml</url-pattern> 
-  </filter-mapping>  
-  <error-page> 
-    <error-code>500</error-code>  
-    <location>/error.xhtml</location> 
-  </error-page>  
-  <welcome-file-list> 
-    <!-- We need a redirect because of MyFaces filter -->  
-    <!-- <welcome-file>index.xhtml</welcome-file> -->  
-    <welcome-file>index.jsp</welcome-file> 
-  </welcome-file-list> 
+<web-app>
+
+  <!-- Servlets -->
+  <servlet>
+    <servlet-name>greetServlet</servlet-name>
+    <servlet-class>com.boolian.cygnus.server.GreetingServiceImpl</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>greetServlet</servlet-name>
+    <url-pattern>/cygnus/greet</url-pattern>
+  </servlet-mapping>
+
+  <!-- Default page to serve -->
+  <welcome-file-list>
+    <welcome-file>cygnus.html</welcome-file>
+  </welcome-file-list>
+
 </web-app>
